[gd_scene load_steps=3 format=2]

[ext_resource path="res://screens/options/graphic_options_screen.gd" type="Script" id=1]
[ext_resource path="res://fonts/menu_buttons.tres" type="Theme" id=2]

[node name="graphic_options_screen" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -392.0
margin_top = 309.0
margin_right = 397.0
margin_bottom = -239.0
color = Color( 0.164706, 0.0196078, 0.0196078, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -332.0
margin_top = 336.0
margin_right = 333.0

[node name="text_info" type="RichTextLabel" parent="VBoxContainer"]
margin_right = 665.0
margin_bottom = 80.0
rect_min_size = Vector2( 0, 80 )
theme = ExtResource( 2 )
bbcode_enabled = true
bbcode_text = "[center]Point any option for details[/center]"
text = "Point any option for details"

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
margin_top = 84.0
margin_right = 665.0
margin_bottom = 94.0
rect_min_size = Vector2( 0, 10 )

[node name="toggle_fullscreen" type="CheckButton" parent="VBoxContainer"]
unique_name_in_owner = true
margin_top = 98.0
margin_right = 665.0
margin_bottom = 171.0
hint_tooltip = "Only on Desktop: full-screen mode if enabled,
windowed if not enabled."
theme = ExtResource( 2 )
text = "Fullscreen (desktop only)"

[node name="toggle_vsync" type="CheckButton" parent="VBoxContainer"]
unique_name_in_owner = true
margin_top = 175.0
margin_right = 665.0
margin_bottom = 248.0
hint_tooltip = "Enables or disable graphic rendering
synchronization with the screen's refresh rate."
theme = ExtResource( 2 )
text = "V-Sync"

[node name="toggle_pixelated" type="CheckButton" parent="VBoxContainer"]
unique_name_in_owner = true
margin_top = 252.0
margin_right = 665.0
margin_bottom = 325.0
hint_tooltip = "Enables or disable big pixel screen mode."
theme = ExtResource( 2 )
text = "Pixelated Screen"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
margin_top = 329.0
margin_right = 665.0
margin_bottom = 339.0
rect_min_size = Vector2( 0, 10 )

[node name="text_fov_angle" type="RichTextLabel" parent="VBoxContainer"]
margin_top = 343.0
margin_right = 665.0
margin_bottom = 423.0
rect_min_size = Vector2( 0, 80 )
hint_tooltip = "Changes the width of the angle of the
player's camera.
Useful to reduce motion sickness."
theme = ExtResource( 2 )
bbcode_text = "FOV Angle"
text = "FOV Angle"

[node name="slider_fov_angle" type="HSlider" parent="VBoxContainer"]
unique_name_in_owner = true
margin_top = 427.0
margin_right = 665.0
margin_bottom = 443.0
hint_tooltip = "Changes the width of the angle of the
player's camera.
Useful to reduce motion sickness."
theme = ExtResource( 2 )
min_value = 60.0
max_value = 120.0
step = 10.0
value = 70.0
tick_count = 11
ticks_on_borders = true
